[project]
name = "libraray-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "pgvector==0.2.3",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "streamlit>=1.44.0",
    "psycopg",
]
